<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/backDrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:contentDescription="@string/backdrop"
        android:scaleType="fitStart"
        android:tint="#02FFFFFF" />
    <android.support.v7.widget.CardView
        android:id="@+id/movieCard"
        android:layout_width="180dp"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="20dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="15dp"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/movie_poster"
            android:cropToPadding="false"
            android:scaleType="centerCrop" />
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/detName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieCard"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/movie_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/detDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/detName"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cardo"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/detOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detDate"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/overview"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:fontFamily="@font/cardo"
        android:text="@string/description"
        android:layout_below="@id/detOverview"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:targetApi="jelly_bean"/>

</RelativeLayout>