<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:elevation="30dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="15dp" tools:targetApi="lollipop">


    <RelativeLayout
        android:id="@+id/saad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.CardView
            android:id="@+id/moviePic"
            android:layout_width="135dp"
            android:layout_height="190dp"
            android:elevation="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="15dp"
            >

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/movie_poster"
                android:cropToPadding="false"
                android:scaleType="centerCrop" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:layout_toEndOf="@id/moviePic"
            android:layout_toRightOf="@id/moviePic"
            android:fontFamily="@font/cardo"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:id="@+id/viewDetails"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_eye"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/view_details"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/releaseDate"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/moviePic"
            android:layout_toRightOf="@id/moviePic"
            android:fontFamily="@font/cardo"
            android:text="@string/movie_name"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cardo"
            android:text="@string/description"
            android:layout_below="@id/movieName"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/moviePic"
            android:layout_toRightOf="@id/moviePic"
            android:textColor="#000000"
            android:textSize="16sp">

        </TextView>


    </RelativeLayout>



</android.support.v7.widget.CardView>